Java 8 update
Tested with JDK 1.8.0_40=ishan-bhatnagar