@@ -30,7 +30,7 @@
 		<segments.version>1.1.7</segments.version>
 		<experimentation.version>1.6.2</experimentation.version>
 		<guava.version>15.0</guava.version>
-		<powermock.version>1.6.1</powermock.version>
+		<powermock.version>1.6.2</powermock.version>
 	</properties>
 
 	<modules>
@@ -124,7 +124,7 @@
 			<dependency>
 				<groupId>org.reflections</groupId>
 				<artifactId>reflections</artifactId>
-				<version>0.9.9-RC1</version>
+				<version>0.9.9</version>
 			</dependency>
 			<dependency>
 				<groupId>com.ning</groupId>
@@ -337,7 +337,7 @@
 			<dependency>
 				<groupId>org.projectlombok</groupId>
 				<artifactId>lombok</artifactId>
-				<version>1.16.0</version>
+				<version>1.16.2</version>
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
@@ -458,8 +458,6 @@
 				<configuration>
 					<skipTests>${skipTests}</skipTests>
 					<forkMode>once</forkMode>
-					<argLine>-XX:-UseSplitVerifier -XX:PermSize=64m
-						-XX:MaxPermSize=128m</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
